--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "typescript": "~3.5.3"
   },
   "engines": {
-    "node": "13.6.0",
-    "npm": "6.13.6"
+    "node": "12.13.0",
+    "npm": "6.x"
   }
 }
