--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "express": "^4.17.1",
     "rxjs": "~6.4.0",
+    "serve-favicon": "^2.5.0",
     "tslib": "^1.10.0",
     "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
