--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/cli": "~8.3.22",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "serve-favicon": "^2.5.0",
     "tslib": "^1.10.0",
@@ -52,6 +58,6 @@
   },
   "engines": {
     "node": "13.6.0",
-    "npm": "6.13.6"
+    "npm": "6.13.7"
   }
 }
